# wiki-topic-words

./: .gitignore  README.md  pyproject.toml
src/wiki_topic_words/: __init__.py  app.py  download_stopword.py
